--- a/index.html
+++ b/index.html
@@ -1,37 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<main>
+    <section class="panel center">
+        <h1>PORTFOLIO</h1>
+        <div class="button-container">
+            <a href="/blogs" class="lando-btn magnetic" data-strength="50">
+                <span class="btn-text">READ BLOGS</span>
+                <div class="btn-fill"></div>
+            </a>
+            
+            <a href="/photography" class="lando-btn magnetic" data-strength="50">
+                <span class="btn-text">PHOTOGRAPHY</span>
+                <div class="btn-fill"></div>
+            </a>
+        </div>
+    </section>
+</main>
 
-    <canvas id="webgl"></canvas>
-
-    <main>
-        <section class="panel">
-            <h1>THE HERO</h1>
-            <p>Scroll down to see the magic.</p>
-        </section>
-        
-        <section class="panel right">
-            <h2>THE MACHINE</h2>
-            <p>Aerodynamic performance meets design.</p>
-        </section>
-
-        <section class="panel">
-            <h2>THE SPEED</h2>
-            <p>Pushing the limits of WebGL.</p>
-        </section>
-
-        <section class="panel center">
-            <h2>CONTACT</h2>
-            <p>Built for the future.</p>
-        </section>
-    </main>
-
-    <script type="module" src="./script.js"></script>
-</body>
-</html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
