--- a/index.html
+++ b/index.html
@@ -3,31 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sagar | Portfolio</title>
+    <title>Sagar | Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="page-home">
 
     <div id="canvas-container"></div>
 
-    <main>
-        <section class="hero">
-            <h1 class="hero-title">SAGAR<span class="dot">.</span></h1>
-            <p class="hero-subtitle">Digital Creator & Visual Artist</p>
-        </section>
-
-        <div id="content-feed" class="feed-container">
-            </div>
-
-        <footer class="footer">
-            <p>© 2025 Sagar. Built for the future.</p>
-        </footer>
+    <main class="hero">
+        <h1 class="hero-title">SAGAR<span class="dot">.</span></h1>
+        <p class="hero-subtitle">Digital Creator & Visual Artist</p>
+        
+        <div class="nav-container">
+            <a href="blogs.html" class="nav-btn">READ BLOGS</a>
+            <a href="photography.html" class="nav-btn">VIEW PHOTOS</a>
+        </div>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    
     <script type="module" src="./script.js"></script>
 </body>
 </html>
