--- a/index.html
+++ b/index.html
@@ -3,63 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sagar | Portfolio</title>
+    <title>Sagar | DNA Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="home-mode">
+<body>
 
     <div id="canvas-container"></div>
 
-    <nav class="fixed-nav">
-        <div class="logo">SAGAR<span class="dot">.</span></div>
-        <div class="menu">
-            <a href="blogs.html" class="nav-link">BLOGS</a>
-            <a href="photography.html" class="nav-link">PHOTOS</a>
+    <div class="grain-overlay"></div>
+
+    <div class="logo-container">
+        <h1 class="main-logo">SAGAR<span class="dot">.</span></h1>
+    </div>
+
+    <button class="menu-btn" onclick="toggleMenu()">MENU</button>
+
+    <div class="menu-overlay" id="menu-overlay">
+        <div class="menu-links">
+            <a href="#" onclick="closeMenu(); scrollToSection('hero')">HOME</a>
+            <a href="blogs.html">BLOGS</a>
+            <a href="photography.html">PHOTOS</a>
+            <a href="#" onclick="closeMenu(); scrollToSection('about')">ABOUT</a>
+            <a href="#" onclick="closeMenu(); scrollToSection('socials')">CONTACT</a>
         </div>
-    </nav>
+    </div>
 
     <main class="scroll-container">
         
-        <section class="panel center" id="hero">
-            <h1 class="glitch-text" data-text="SAGAR">SAGAR</h1>
-            <p class="subtitle">Digital Creator & Visual Artist</p>
-            <div class="scroll-hint">SCROLL FOR INFO ↓</div>
+        <section class="panel" id="hero">
+            <div class="scroll-hint">SCROLL TO EVOLVE ↓</div>
         </section>
 
-        <section class="panel left" id="about">
-            <div class="panel-content">
-                <h2>WHO AM I?</h2>
-                <p class="bio-text">
-                    I am a creator based in Bengaluru, obsessed with the intersection of 
-                    <strong>Technology</strong> and <strong>Art</strong>. 
+        <section class="panel center" id="about">
+            <div class="panel-content glass-card">
+                <h2>THE CODE OF LIFE</h2>
+                <p>
+                    Just as DNA holds the instructions for life, I write the code that brings ideas to reality.
                     <br><br>
-                    My work explores sci-fi narratives, digital aesthetics, and the raw beauty of urban photography.
-                    I build worlds with code and capture moments with light.
+                    I am a <strong>Creative Developer</strong> & <strong>Visual Storyteller</strong>.
                 </p>
             </div>
         </section>
 
         <section class="panel center" id="socials">
-            <h2>CONNECT</h2>
-            <div class="social-grid">
-                <a href="#" class="social-btn">INSTAGRAM</a>
-                <a href="#" class="social-btn">TWITTER</a>
-                <a href="#" class="social-btn">LINKEDIN</a>
-                <a href="#" class="social-btn">YOUTUBE</a>
+            <div class="panel-content glass-card">
+                <h2>CONNECT</h2>
+                <div class="social-grid">
+                    <a href="#" class="social-link">INSTAGRAM</a>
+                    <a href="#" class="social-link">TWITTER</a>
+                    <a href="#" class="social-link">LINKEDIN</a>
+                    <a href="#" class="social-link">EMAIL</a>
+                </div>
             </div>
         </section>
 
     </main>
 
-    <footer class="matrix-footer">
-        <div class="ticker-wrap">
-            <div class="ticker-move" id="matrix-text">
-                </div>
-        </div>
-    </footer>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    
     <script type="module" src="./script.js"></script>
 </body>
 </html>
