--- a/index.html
+++ b/index.html
@@ -53,4 +53,16 @@
                     <a href="#" class="social-link">TWITTER</a>
                     <a href="#" class="social-link">LINKEDIN</a>
                     <a href="#" class="social-link">EMAIL</a>
-                    
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    
+    <script type="module" src="./script.js"></script>
+</body>
+</html>
