--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body class="home-mode">
 
     <audio id="rain-audio" loop>
-        <source src="https://assets.mixkit.co/active_storage/sfx/1271/1271-preview.mp3" type="audio/mpeg">
-    </audio>
+    <source src="mixkit-calm-thunderstorm-in-the-jungle-2415.wav" type="audio/wav">
+</audio>
     <button id="sound-toggle" class="sound-btn"><i class="fa-solid fa-volume-xmark"></i></button>
 
     <div id="canvas-container"></div>
