--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <div id="canvas-container"></div>
 
-    <h1 class="hero-logo">SAGAR</h1>
+    <h1 class="hero-logo" id="hero-logo">SAGAR</h1>
 
-<button id="menu-toggle-btn" class="menu-btn">MENU</button>
+    <button id="menu-toggle-btn" class="menu-btn">MENU</button>
 
     <div class="menu-overlay" id="menu-overlay">
         <div class="menu-links">
@@ -27,7 +27,7 @@
 
     <main class="scroll-container">
         
-        <section class="panel" id="hero"></section>
+        <section class="panel" id="hero" style="height: 100vh;"></section>
 
         <section class="panel center" id="about">
             <div class="panel-content soft-card">
@@ -57,6 +57,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     
-    <script type="module" src="./script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
