--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sagar | Soft 3D</title>
+    <title>Sagar | 3D Universe</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -11,9 +11,15 @@
 
     <div id="canvas-container"></div>
 
-    <h1 class="hero-logo" id="hero-logo">SAGAR</h1>
+    <h1 class="hero-logo" id="hero-logo">
+        <span class="letter">S</span>
+        <span class="letter">A</span>
+        <span class="letter">G</span>
+        <span class="letter">A</span>
+        <span class="letter">R</span>
+    </h1>
 
-    <button id="menu-toggle-btn" class="menu-btn">MENU</button>
+    <div id="robot-container" class="robot-btn"></div>
 
     <div class="menu-overlay" id="menu-overlay">
         <div class="menu-links">
@@ -27,21 +33,21 @@
 
     <main class="scroll-container">
         
-        <section class="panel" id="hero" style="height: 100vh;"></section>
+        <section class="panel" id="hero" style="height: 150vh;"></section>
 
         <section class="panel center" id="about">
             <div class="panel-content soft-card">
                 <h2>THE CREATOR</h2>
                 <p>
-                    I design digital playgrounds. <br>
-                    <strong>Playful</strong>, <strong>Interactive</strong>, and <strong>Human</strong>.
+                    I design digital universes. <br>
+                    <strong>Art</strong> + <strong>Code</strong> + <strong>Soul</strong>.
                 </p>
             </div>
         </section>
 
         <section class="panel center" id="socials">
             <div class="panel-content soft-card">
-                <h2>SAY HELLO</h2>
+                <h2>CONNECT</h2>
                 <div class="social-grid">
                     <a href="#" class="social-pill inst"><i class="fa-brands fa-instagram"></i></a>
                     <a href="#" class="social-pill twit"><i class="fa-brands fa-twitter"></i></a>
