--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
     <div id="canvas-container"></div>
 
     <h1 class="hero-logo" id="hero-logo">
-        <span class="letter">S</span>
-        <span class="letter">A</span>
-        <span class="letter">G</span>
-        <span class="letter">A</span>
-        <span class="letter">R</span>
+        <span class="letter">S</span><span class="letter">A</span><span class="letter">G</span><span class="letter">A</span><span class="letter">R</span>
     </h1>
 
     <div id="robot-container" class="robot-btn"></div>
@@ -32,16 +28,12 @@
     </div>
 
     <main class="scroll-container">
-        
-        <section class="panel" id="hero" style="height: 150vh;"></section>
+        <section class="panel spacer" id="hero"></section>
 
         <section class="panel center" id="about">
             <div class="panel-content soft-card">
                 <h2>THE CREATOR</h2>
-                <p>
-                    I design digital universes. <br>
-                    <strong>Art</strong> + <strong>Code</strong> + <strong>Soul</strong>.
-                </p>
+                <p>I design digital universes.<br><strong>Art</strong> + <strong>Code</strong> + <strong>Soul</strong>.</p>
             </div>
         </section>
 
@@ -56,13 +48,11 @@
                 </div>
             </div>
         </section>
-
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    
     <script src="./script.js"></script>
 </body>
 </html>
