--- a/blogs.html
+++ b/blogs.html
@@ -2,23 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sagar | Blogs</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sagar | Content</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="page-content">
-
+<body class="content-mode">
     <div id="canvas-container"></div>
+    
+    <div id="robot-container" class="robot-btn"></div>
+    
+    <div class="menu-overlay" id="menu-overlay">
+        <div class="menu-links">
+            <a href="index.html" class="menu-item">HOME</a>
+            <a href="blogs.html" class="menu-item">BLOGS</a>
+            <a href="photography.html" class="menu-item">PHOTOS</a>
+            <a href="index.html#about" class="menu-item">ABOUT</a>
+            <a href="index.html#socials" class="menu-item">CONTACT</a>
+        </div>
+    </div>
 
-    <nav class="top-nav">
-        <a href="index.html" class="back-link"> ← HOME</a>
-        <h2 class="page-title">WRITING LOGS</h2>
-    </nav>
-
-    <div id="content-feed" class="feed-container"></div>
+    <main class="scroll-container"></main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script type="module" src="./script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
