--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
     </div>
 
     <main class="scroll-container">
+        
         <section class="panel spacer" id="hero"></section>
+
+        <div class="photo-break">
+            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&q=80" alt="Sagar Profile">
+        </div>
 
         <section class="panel center" id="about">
             <div class="panel-content soft-card">
@@ -36,6 +41,10 @@
                 <p>I design digital universes.<br><strong>Art</strong> + <strong>Code</strong> + <strong>Soul</strong>.</p>
             </div>
         </section>
+
+        <div class="photo-break">
+            <img src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?w=800&q=80" alt="Studio Shot">
+        </div>
 
         <section class="panel center" id="socials">
             <div class="panel-content soft-card">
@@ -48,12 +57,12 @@
                 </div>
             </div>
         </section>
+
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    
     <script src="./script.js"></script>
 </body>
 </html>
