--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="panel spacer" id="hero"></section>
 
         <div class="photo-break">
-            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&q=80" alt="Sagar Profile">
+            <img src="IMG_20251228_104042.jpg" alt="Sagar Profile">
         </div>
 
         <section class="panel center" id="about">
