--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
 
         <div class="photo-break">
-            <img src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?w=800&q=80" alt="Studio">
+            <img src="IMG_20251228_104439.jpg" alt="Travel">
         </div>
 
         <section class="panel center" id="socials">
