--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <meta name="twitter:image" content="https://portfolio-sagar-lac.vercel.app/IMG_20251228_104042.jpg">
 
 </head>
+
+    <div id="preloader" style="position:fixed; top:0; left:0; width:100%; height:100%; background:#1a1a2e; z-index:10000; display:flex; justify-content:center; align-items:center; color:white; font-family:sans-serif; transition: opacity 0.5s;">
+    LOADING UNIVERSE...
+    </div>
     
 <body class="home-mode">
 
