--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sagar | Portfolio</title>
@@ -24,9 +25,20 @@
 
 </head>
 
-    <div id="preloader" style="position:fixed; top:0; left:0; width:100%; height:100%; background:#1a1a2e; z-index:10000; display:flex; justify-content:center; align-items:center; color:white; font-family:sans-serif; transition: opacity 0.5s;">
-    LOADING UNIVERSE...
+    <div id="preloader">
+    <div class="loader-container">
+        <div class="bike-wrapper">
+            <i class="fa-solid fa-bicycle" id="bike-icon"></i>
+        </div>
+        
+        <div class="loading-pill">
+            <div class="pill-fill"></div>
+        </div>
+
+        <div class="loading-text">LOADING UNIVERSE...</div>
     </div>
+</div>
+
     
 <body class="home-mode">
 
