--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sagar | Portfolio</title>
+    <title>Sagar | 3D Universe</title>
     
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Sagar | Portfolio">
-    <meta property="og:description" content="Welcome to my digital universe. Exploring Art, Code, and 3D Interaction.">
-    <meta property="og:image" content="https://portfolio-sagar-lac.vercel.app/IMG_20251228_104042.jpg">
-    <meta property="og:url" content="https://portfolio-sagar-lac.vercel.app/">
+    <meta property="og:title" content="Sagar | 3D Creative Portfolio">
+    <meta property="og:description" content="Welcome to my digital universe.">
+    <meta property="og:image" content="https://YOUR-WEBSITE-URL.vercel.app/profile1.jpg">
     <meta property="og:type" content="website">
+
+    <style>
+        @keyframes forceHide {
+            0% { opacity: 1; visibility: visible; }
+            90% { opacity: 0; visibility: visible; }
+            100% { opacity: 0; visibility: hidden; pointer-events: none; }
+        }
+    </style>
 </head>
 <body class="home-mode">
 
@@ -28,23 +35,17 @@
         justify-content: center; 
         align-items: center;
         font-family: monospace;
+        animation: forceHide 0.5s ease 5s forwards; 
+        pointer-events: all;
     ">
         <div style="font-size: 40px; color: #00f3ff; margin-bottom: 20px;">
             <i class="fa-solid fa-bicycle"></i>
         </div>
-
         <div style="color: #ff007f; margin-bottom: 20px; font-size: 14px; letter-spacing: 2px; font-family: 'Press Start 2P', cursive;">
             LOADING UNIVERSE...
         </div>
-
         <div style="width: 300px; height: 20px; border: 3px solid white; border-radius: 10px; padding: 2px;">
-            <div id="bar-fill" style="
-                width: 0%; 
-                height: 100%; 
-                background: linear-gradient(to right, #00f3ff, #ff007f); 
-                border-radius: 5px; 
-                transition: width 4.5s linear;
-            "></div>
+            <div id="bar-fill" style="width: 0%; height: 100%; background: linear-gradient(to right, #00f3ff, #ff007f); border-radius: 5px; transition: width 4.5s linear;"></div>
         </div>
     </div>
 
@@ -53,15 +54,6 @@
             var bar = document.getElementById('bar-fill');
             if(bar) bar.style.width = "100%";
         }, 100);
-
-        setTimeout(function() {
-            var loader = document.getElementById('preloader');
-            if(loader) {
-                loader.style.transition = "opacity 0.5s ease";
-                loader.style.opacity = "0";
-                setTimeout(function() { loader.remove(); }, 500);
-            }
-        }, 5000); 
     </script>
 
 
@@ -94,7 +86,7 @@
         <section class="panel spacer" id="hero"></section>
 
         <div class="photo-break">
-            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&q=80" alt="Sagar Profile">
+            <img src="./profile1.jpg" alt="Sagar Profile" onerror="this.style.display='none'">
         </div>
 
         <section class="panel center" id="about">
@@ -111,17 +103,17 @@
         </section>
 
         <div class="photo-break">
-            <img src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?w=800&q=80" alt="Studio Space">
+             <img src="./studio.jpg" alt="Studio Space" onerror="this.style.display='none'">
         </div>
 
         <section class="panel center" id="socials">
             <div class="panel-content soft-card">
                 <h2>CONNECT</h2>
                 <div class="social-grid">
-                    <a href="https://instagram.com/iamhsagar" target="_blank" class="social-pill inst"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://twitter.com/iamhsagar" target="_blank" class="social-pill twit"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="https://linkedin.com/in/your_username" target="_blank" class="social-pill link"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="mailto:sagarh403@gmail.com" class="social-pill mail"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="https://instagram.com" target="_blank" class="social-pill inst"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://twitter.com" target="_blank" class="social-pill twit"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://linkedin.com" target="_blank" class="social-pill link"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="mailto:email@example.com" class="social-pill mail"><i class="fa-solid fa-envelope"></i></a>
                 </div>
             </div>
         </section>
