--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sagar | 3D Universe</title>
+    
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <meta property="og:title" content="Sagar | 3D Creative Portfolio">
+    <meta property="og:description" content="Welcome to my digital universe.">
+    <meta property="og:image" content="https://YOUR-WEBSITE-URL.vercel.app/profile1.jpg">
+    <meta property="og:type" content="website">
 </head>
 <body class="home-mode">
 
@@ -34,18 +40,24 @@
         <section class="panel spacer" id="hero"></section>
 
         <div class="photo-break">
-            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&q=80" alt="Sagar Profile">
+            <img src="./profile1.jpg" alt="Sagar Profile" onerror="this.style.display='none'">
         </div>
 
         <section class="panel center" id="about">
             <div class="panel-content soft-card">
                 <h2>THE CREATOR</h2>
-                <p>I design digital universes.<br><strong>Art</strong> + <strong>Code</strong> + <strong>Soul</strong>.</p>
+                <p>
+                    I design digital universes.<br>
+                    <strong>Art</strong> + <strong>Code</strong> + <strong>Soul</strong>.
+                </p>
+                <a href="./Sagar_CV.pdf" target="_blank" style="display:inline-block; margin-top:20px; padding:10px 30px; background:var(--accent-orange); color:var(--text-cream); text-decoration:none; font-weight:bold; border-radius:30px; transition:0.3s;">
+                    DOWNLOAD CV
+                </a>
             </div>
         </section>
 
         <div class="photo-break">
-            <img src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?w=800&q=80" alt="Studio">
+            <img src="./studio.jpg" alt="Studio Space" onerror="this.style.display='none'">
         </div>
 
         <section class="panel center" id="socials">
@@ -65,7 +77,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    
     <script src="./script.js"></script>
 </body>
 </html>
