--- a/blogs.html
+++ b/blogs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sagar | Blogs</title>
-    <link rel="stylesheet" href="style.css?v=3.0">
+    <link rel="stylesheet" href="style.css?v=5.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="content-mode">
@@ -17,14 +17,27 @@
     </div>
 
     <div id="canvas-container"></div>
-    
+
     <button id="menu-toggle-btn" class="menu-btn">
         <i class="fa-solid fa-bars"></i> MENU
     </button>
-    
+
+    <div class="menu-overlay" id="menu-overlay">
+        <div class="menu-links">
+            <a href="index.html" class="menu-item">HOME</a>
+            <a href="blogs.html" class="menu-item">BLOGS</a>
+            <a href="photography.html" class="menu-item">PHOTOS</a>
+            <a href="index.html#about" class="menu-item">ABOUT</a>
+            <a href="index.html#socials" class="menu-item">CONTACT</a>
+        </div>
+    </div>
+
+    <main class="scroll-container">
+        </main>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="./script.js?v=3.0"></script>
+    <script src="./script.js?v=5.0"></script>
 </body>
 </html>
