--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <div id="canvas-container"></div>
 
     <h1 class="hero-logo" id="hero-logo">
-        <span class="letter">S</span><span class="letter">A</span><span class="letter">G</span><span class="letter">A</span><span class="letter">R</span>
-    </h1>
+    <span class="letter">S</span><span class="letter">A</span><span class="letter">G</span><span class="letter">A</span><span class="letter">R</span>
+</h1>
+
+<div class="hero-subtitle" id="hero-subtitle">SYSTEM.INIT(CREATIVE_DEV)</div>
 
     <button id="menu-toggle-btn" class="menu-btn">
     <span class="menu-line"></span>
