--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="hero-img-side">
                 <div class="orbit-circle orbit-1"></div>
                 <div class="orbit-circle orbit-2"></div>
-                <img src="./assets/1000044033-removebg-preview.png">
+                <img src="./assets/Sagar3d.png">
             </div>
         </div>
     </header>
