--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAGAR H | Digital Portfolio</title>
+    <meta property="og:image" content="https://YOUR-WEBSITE-LINK.vercel.app/assets/logo.png">
+
+<meta property="og:title" content="SAGAR H | Digital Portfolio">
+<meta property="og:description" content="Innovate. Secure. Transform. Crafting digital universes with code and art.">
+
+<meta property="og:url" content="https://sagar-unfiltered.vercel.app/">
+<meta property="og:type" content="website">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="SAGAR H | Digital Portfolio">
+<meta name="twitter:description" content="Innovate. Secure. Transform. Crafting digital universes with code and art.">
+<meta name="twitter:image" content="https://sagar-unfiltered.vercel.app/assets/logo.png">
+    
     <link rel="stylesheet" href="style.css?v=15.2">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
