--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAGAR H | Digital Portfolio</title>
-    <meta property="og:image" content="https://YOUR-WEBSITE-LINK.vercel.app/assets/logo.png">
+    <meta property="og:image" content="https://sagar-unfiltered.vercel.app/assets/logo.png">
 
 <meta property="og:title" content="SAGAR H | Digital Portfolio">
 <meta property="og:description" content="Innovate. Secure. Transform. Crafting digital universes with code and art.">
