--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
 
             <div class="hero-right">
-                <img src="./assets/my-photo.png" alt="Sagar H" class="hero-img">
+                <img src="./assets/Sagar3d.png" alt="Sagar H" class="hero-img">
             </div>
         </div>
 
